--- a/albumLleno.html
+++ b/albumLleno.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="estilos.css">
+    <link rel="shortcut icon" href="logo-fa.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./logo-fa.png" type="image/x-icon">
-    <title>Figuarmy Colecciones</title>
+    <title>Servicio de Album lleno</title>
 </head>
 <body class="body">
     <header class="header">
@@ -50,58 +50,8 @@
             </div>
           </nav>
     </header>
-    <div class="contenedor">
-        <h2 class="transform">Encontra todo lo que buscas</h2>
-        <div class="center">
-            <div class="tarjeta">
-            <img class="img" src="Coco_tapa.jpg" alt="Coco">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>        
-            </div>
-            <div class="tarjeta">
-            <img class="img" src="dragon ball z 4.jpg" alt="Dragon ball z 4">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>
-            </div>
-            <div class="tarjeta">
-            <img class="img" src="naruto.jpg" alt="naruto">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>
-            </div>
-            <div class="tarjeta">
-            <img class="img" src="Coco_tapa.jpg" alt="Coco">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>        
-            </div>            
-            <div class="tarjeta">
-            <img class="img" src="dragon ball z 4.jpg" alt="Dragon ball z 4">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>
-            </div>
-            <div class="tarjeta">
-            <img class="img" src="naruto.jpg" alt="naruto">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>
-            </div>
-            <div class="tarjeta">
-            <img class="img" src="Coco_tapa.jpg" alt="Coco">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>        
-            </div>            
-            <div class="tarjeta">
-            <img class="img" src="dragon ball z 4.jpg" alt="Dragon ball z 4">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>
-            </div>
-        </div>
+    <div class="center">
+        <img class="img"src="album-panini-2022.jpeg" alt="albums completos"> 
     </div>
     <footer class="footer">
         <p class="p"> © 2022 Figuarmy Colecciones. Todos los Derechos Reservados.</p>
@@ -109,7 +59,6 @@
         <a href="https://es-la.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
         <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
-        <a href="/contacto.html" class="jajas">Contactenos</a>
     </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
