--- a/contacto.html
+++ b/contacto.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./logo-fa.png" type="image/x-icon">
-    <title>Figuarmy Colecciones</title>
+    <title>Document</title>
 </head>
-<body class="body">
+<body>
     <header class="header">
         <nav class="navbar fixed-top">
             <div class="container-fluid">
@@ -50,68 +48,35 @@
             </div>
           </nav>
     </header>
-    <div class="contenedor">
-        <h2 class="transform">Encontra todo lo que buscas</h2>
-        <div class="center">
-            <div class="tarjeta">
-            <img class="img" src="Coco_tapa.jpg" alt="Coco">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>        
-            </div>
-            <div class="tarjeta">
-            <img class="img" src="dragon ball z 4.jpg" alt="Dragon ball z 4">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>
-            </div>
-            <div class="tarjeta">
-            <img class="img" src="naruto.jpg" alt="naruto">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>
-            </div>
-            <div class="tarjeta">
-            <img class="img" src="Coco_tapa.jpg" alt="Coco">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>        
-            </div>            
-            <div class="tarjeta">
-            <img class="img" src="dragon ball z 4.jpg" alt="Dragon ball z 4">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>
-            </div>
-            <div class="tarjeta">
-            <img class="img" src="naruto.jpg" alt="naruto">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>
-            </div>
-            <div class="tarjeta">
-            <img class="img" src="Coco_tapa.jpg" alt="Coco">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>        
-            </div>            
-            <div class="tarjeta">
-            <img class="img" src="dragon ball z 4.jpg" alt="Dragon ball z 4">
-            <p>Nombre: </p>
-            <p>Precio: </p>
-            <button>Comprar</button>
-            </div>
-        </div>
+<div class="body-contacto">    
+    <div class="centro">
+        <h2 class="form">Consultas</h2>
+            <form class="form" action="action_page.php">
+                <label for="nombre">Nombre</label>
+                <input type="text" id="name"><br><br>
+                <label for="apellido">Apellido</label>
+                <input type="text" id="apellido"><br><br>
+                <label for="Telefono de contacto">Telefono de contacto</label>
+                <input type="number" id="Telefono de contacto"><br><br>
+                <label for="correo electronico">Correo electronico</label>
+                <input type="email" name="Correo electronico"><br><br>
+                <label for="comentarios">Consultas:</label><br>
+                <textarea name="comentarios" id="" cols="30" rows="10">
+                </textarea>
+                <input type="submit" value="Enviar">
+                <input type="reset">
+        </form>
     </div>
-    <footer class="footer">
-        <p class="p"> © 2022 Figuarmy Colecciones. Todos los Derechos Reservados.</p>
-        <div class="redes">
-        <a href="https://es-la.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
-        <a href="/contacto.html" class="jajas">Contactenos</a>
-    </div>
-    </footer>
+</div>
+<footer class="footer">
+    <p class="p"> © 2022 Figuarmy Colecciones. Todos los Derechos Reservados.</p>
+    <div class="redes">
+    <a href="https://es-la.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+    <a href="/contacto.html">Contactenos</a>
+</div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
