--- a/albumLleno.html
+++ b/albumLleno.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="la mejor pagina de figuritas">
+    <meta name="keywords" content="figuritas, album, mundial, qatar, messi, maincraft">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="logo-fa.png" type="image/x-icon">
