--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+    <meta name="description" content="la mejor pagina de figuritas">
+    <meta name="keywords" content="figuritas, album, mundial, qatar, messi, maincraft">
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="shortcut icon" href="./logo-fa.png" type="image/x-icon">
@@ -95,49 +97,49 @@
             <img class="img" src="Coco_tapa.jpg" alt="Coco">
             <p>Nombre: </p>
             <p>Precio: </p>
-            <button type="button" class="btn btn-light">Comprar</button>        
+            <button type="button" class="boton--comprar">Comprar</button>        
             </div>
             <div class="tarjeta">
             <img class="img" src="dragon ball z 4.jpg" alt="Dragon ball z 4">
             <p>Nombre: </p>
             <p>Precio: </p>
-            <button type="button" class="btn btn-light">Comprar</button>   
+            <button type="button" class="boton--comprar">Comprar</button>   
             </div>
             <div class="tarjeta">
             <img class="img" src="naruto.jpg" alt="naruto">
             <p>Nombre: </p>
             <p>Precio: </p>
-            <button type="button" class="btn btn-light">Comprar</button>   
+            <button type="button" class="boton--comprar">Comprar</button>   
             </div>
             <div class="tarjeta">
             <img class="img" src="Coco_tapa.jpg" alt="Coco">
             <p>Nombre: </p>
             <p>Precio: </p>
-            <button type="button" class="btn btn-light">Comprar</button>         
+            <button type="button" class="boton--comprar">Comprar</button>         
             </div>            
             <div class="tarjeta">
             <img class="img" src="dragon ball z 4.jpg" alt="Dragon ball z 4">
             <p>Nombre: </p>
             <p>Precio: </p>
-            <button type="button" class="btn btn-light">Comprar</button>
+            <button type="button" class="boton--comprar">Comprar</button>
             </div>
             <div class="tarjeta">
             <img class="img" src="naruto.jpg" alt="naruto">
             <p>Nombre: </p>
             <p>Precio: </p>
-            <button type="button" class="btn btn-light">Comprar</button>
+            <button type="button" class="boton--comprar">Comprar</button>
             </div>
             <div class="tarjeta">
             <img class="img" src="Coco_tapa.jpg" alt="Coco">
             <p>Nombre: </p>
             <p>Precio: </p>
-            <button type="button" class="btn btn-light">Comprar</button>        
+            <button type="button" class="boton--comprar">Comprar</button>        
             </div>            
             <div class="tarjeta">
             <img class="img" src="dragon ball z 4.jpg" alt="Dragon ball z 4">
             <p>Nombre: </p>
             <p>Precio: </p>
-            <button type="button" class="btn btn-light">Comprar</button>
+            <button type="button" class="boton--comprar">Comprar</button>
             </div>
         </div>
     </div>
