agregado de contenido paginas secundarias

--- a/albumLleno.html
+++ b/albumLleno.html
@@ -52,9 +52,11 @@
             </div>
           </nav>
     </header>
+    <h1 class="transform">Completa tus colecciones</h1>
     <div class="center">
         <img class="img"src="album-panini-2022.jpeg" alt="albums completos"> 
     </div>
+    <p>Consultanos por tu figurita faltante y completa tu colección</p>
     <footer class="footer">
         <p class="p"> © 2022 Figuarmy Colecciones. Todos los Derechos Reservados.</p>
         <div class="redes">
