--- a/promociones.html
+++ b/promociones.html
@@ -52,6 +52,7 @@
             </div>
           </nav>
     </header>
+    <h1>Combos de album + figuritas</h1>
     <div class="center">
         <img class="img" src="Minecraft.jpg" alt="Minecraft"> 
     </div>
