--- a/nuevas.html
+++ b/nuevas.html
@@ -52,9 +52,11 @@
             </div>
           </nav>
     </header>
+    <h1>Nuevas Colecciones</h1>
     <div class="center">
         <img class="img" src="marvel.jpg" alt="marvel">    
     </div>
+    <p>Encontrá todo sobre los nuevos lanzamientos</p>
     <footer class="footer">
         <p class="p"> © 2022 Figuarmy Colecciones. Todos los Derechos Reservados.</p>
         <div class="redes">
