--- a/recuerdos.html
+++ b/recuerdos.html
@@ -52,9 +52,9 @@
             </div>
           </nav>
     </header>
+    <h1>Colecciones anteriores</h1>
     <div class="center">
         <img class="img" src="harry potter.jpg" alt="harry potter">
-        
     </div>
     <footer class="footer">
         <p class="p"> © 2022 Figuarmy Colecciones. Todos los Derechos Reservados.</p>
