agregado de contenido

--- a/albumLleno.html
+++ b/albumLleno.html
@@ -52,11 +52,11 @@
             </div>
           </nav>
     </header>
-    <h1 class="transform">Completa tus colecciones</h1>
-    <div class="center">
+    <div class="centrar">
+    <h2 class="transform">Figuritas Faltantes</h2>
         <img class="img"src="album-panini-2022.jpeg" alt="albums completos"> 
+    <p>Consultanos por tu figurita faltante y completa tu colecciones antiguas</p>
     </div>
-    <p>Consultanos por tu figurita faltante y completa tu colección</p>
     <footer class="footer">
         <p class="p"> © 2022 Figuarmy Colecciones. Todos los Derechos Reservados.</p>
         <div class="redes">
