--- a/promociones.html
+++ b/promociones.html
@@ -52,10 +52,11 @@
             </div>
           </nav>
     </header>
-    <h1>Combos de album + figuritas</h1>
-    <div class="center">
-        <img class="img" src="Minecraft.jpg" alt="Minecraft"> 
-    </div>
+    <div class="centrar">
+      <h2 class="transform">Combos album + figuritas</h2>
+      <img class="img" src="Minecraft.jpg" alt="Minecraft"> 
+      <p>Encontrá todo sobre los nuevos lanzamientos</p>
+      </div>
     <footer class="footer">
         <p class="p"> © 2022 Figuarmy Colecciones. Todos los Derechos Reservados.</p>
         <div class="redes">
