--- a/nuevas.html
+++ b/nuevas.html
@@ -52,11 +52,11 @@
             </div>
           </nav>
     </header>
-    <h1>Nuevas Colecciones</h1>
-    <div class="center">
-        <img class="img" src="marvel.jpg" alt="marvel">    
-    </div>
-    <p>Encontrá todo sobre los nuevos lanzamientos</p>
+    <div class="centrar">
+      <h2 class="transform">Nuevas Colecciones</h2>
+      <img class="img" src="marvel.jpg" alt="marvel"> 
+      <p>Encontrá todo sobre los nuevos lanzamientos</p>
+      </div>
     <footer class="footer">
         <p class="p"> © 2022 Figuarmy Colecciones. Todos los Derechos Reservados.</p>
         <div class="redes">
